Revision history for Perl extension Chess-Plisco

{{$NEXT}}
	- fixed exception in quiescence search
	- implement the UCI stop command

0.1  2021-09-19
	- initial version